# project-rustlingtree

./: .gitignore  AGENTS.md  API_README.md  a320.yml  data_manifest.json  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
.codex/environments/: environment.toml
coefficient_overwrites/: a320.yml
docs/: recipe.md
docs/cifp/: arinc424_route_and_section_code_reference.md
docs/simap/: fms_walkthrough.md  implementation_walkthrough.md  longitudinal_planner_walkthrough.md  planner_walkthrough.md  simap_sim.md
docs/walkthroughs/: simap_sim.md
prompts/: create-walkthrough.md
prompts/scenario_manager/: scenario_manager_design.md
prompts/sim_2/: sim2_plan.md
prompts/sim_lat/: formula.md
prompts/sim_lon/: architect.md  formula.md
scripts/: plot_aircraft_trajectory.py  x_check_simap_adsb.py
scripts/x_check_simap_adsb/: __init__.py  envelope_viz.py
simap/: __init__.py  backends.py  calibration.py  config.py  dynamics.py  lateral_dynamics.py  longitudinal_dynamics.py  longitudinal_profiles.py  openap_adapter.py  profiles.py  simap_plot.py  simulator.py  weather.py
simap/examples/: __init__.py  run_a320.py
tests/: __init__.py  helpers.py  test_adip_resources.py  test_calibration.py  test_cifp_parser.py  test_coupled_simulator.py  test_extract_departures_and_arrivals.py  test_fms_bichannel.py  test_lateral_dynamics.py  test_path_geometry.py  test_precompute_artifact.py  test_profiles.py  test_scenario_manager.py  test_simap_plot.py  test_simulator.py  test_tactical.py  test_trajectory_compressor.py  test_x_check_simap_adsb.py
(+100 files in other folders)
