[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-rustlingtree"
version = "0.1.0"
description = "Reduced-order approach simulation package backed by OpenAP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.8.0",
    "notebook>=7.5.5",
    "numpy>=1.26.0",
    "openap>=2.5.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "polars>=1.0.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.4",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.35.0",
]

[project.scripts]
adsb-trajectory-compress = "scenario.trajectory_compressor.cli:main"
scenario-manager-api = "mcp_tools.scenario_manager.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
